# demoAIagent

./: .gitconfig  .gitignore  ACTION-PLAN.md  FIX-OPENAI.md  MCP-GOOGLE-ГОТОВ.md  MCP-НАСТРОЙКА.md  MVP-ГОТОВ.md  MVP-ИТОГ.md  PYCHARM-SETUP.md  README-v1.0.md  README.md  SECRETS-SETUP.md  check_august_data.py  env.example  env.universal  fix_emojis.py  mcp_server.py  package.json  pyproject.toml  requirements.txt  run_daily_analysis.bat  setup-node.ps1  setup.bat  setup_scheduler.ps1  АВТОЗАПУСК-ГОТОВ.md  АНАЛИЗ-ТАБЛИЦЫ.md  БЫСТРЫЙ-СТАРТ.md  ВЕРСИЯ-1.0-ГОТОВА.md  ВИДЕНИЕ-MVP.md  ИНСТРУКЦИЯ-ПО-РАБОТЕ.md  ИСПРАВЛЕНИЕ-OPENAI.md  ИСПРАВЛЕНИЕ-ПРОБЛЕМ.md  ИСПРАВЛЕНИЕ-ТЕРМИНАЛА.md  ИТОГ-СЕГОДНЯ.md  ИТОГИ-15-ОКТЯБРЯ.md  ИТОГИ-РЕОРГАНИЗАЦИИ.md  ИТОГОВОЕ-РЕЗЮМЕ.md  ИТОГОВЫЙ-ОТЧЕТ.md  КАРТА-ПРОЕКТА.md  НАСТРОЙКА-MCP-GOOGLE.md  (+13 more)
.cursor/rules/: my-castom-rules.mdc
docs/: MVP-VISION-AND-ROADMAP.md  QUICK-START.md  READY-TO-USE.md  algorithm-starter-rules.md  base-info.md  client-brief.md  cursor-sheets-tldv.md  google-sheets-setup-guide.md  pyproject.toml  setup.py
docs/guides/: READY-TO-USE.md  ИНСТРУКЦИЯ-ПО-РАБОТЕ.md  ИСПРАВЛЕНИЕ-OPENAI.md  РЕШЕНИЕ-ПРОБЛЕМ.md
docs/reference/: MVP-VISION-AND-ROADMAP.md  algorithm-starter-rules.md  base-info.md  client-brief.md  cursor-sheets-tldv.md
docs/setup/: MCP-GOOGLE-ГОТОВ.md  PYCHARM-SETUP.md  QUICK-START.md  google-sheets-setup-guide.md  БЫСТРЫЙ-СТАРТ.md  НАСТРОЙКА-MCP-GOOGLE.md  НАСТРОЙКА-СЕКРЕТОВ.md
docs/v1.0/: MVP-ИТОГ.md  README-v1.0.md  ВЕРСИЯ-1.0-ГОТОВА.md
docs/v2.0/: ИТОГ-СЕГОДНЯ.md  НАЧАЛО-V2.0.md  ОЦЕНКА-ПРОЕКТ-ЯДРО.md  ПЛАН-РАЗРАБОТКИ-V2.0.md  СТРАТЕГИЯ-V2.0.md  ШАБЛОН-САМОПРОВЕРКИ.md
reports/: daily-report-2025-10-01.md  daily-report-2025-10-02.md  daily-report-2025-10-06.md
reports/daily/: 2025-10-01.md  2025-10-02.md  2025-10-06.md
src/: index.ts
src/ai_agent/: __init__.py  config.py
src/ai_agent/google/: __init__.py  auth.py  drive.py  sheets.py
src/ai_agent/jobs/: __init__.py  august_daily_analyzer.py  daily_analyzer_with_algorithm.py  proposals_from_drive.py  scan_data_funnel.py
src/ai_agent/llm/: __init__.py  (+1 more)
src/apps-script/: adaptive-analyzer-v2.gs  enhanced-agent.gs
src/google/: auth.ts  drive.ts  sheets.ts
src/jobs/: proposals-from-drive.ts  setup-algorithm.ts
src/llm/: extract.ts
src/setup/: google-setup.ts
(+2 files in other folders)
