[tool.poetry]
name = "ai-agent-with-cursor"
version = "1.0.0"
description = "AI-агент для автоматизации работы с Google Sheets и маркетплейсами"
authors = ["EvgeniyRibakov <evgenijrybakov01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.108.0"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
setup-google = "ai_agent.setup.google_setup:main"
proposals-from-drive = "ai_agent.jobs.proposals_from_drive:main"
test-connections = "ai_agent.setup.test_connections:main"
analyze-daily = "ai_agent.jobs.august_daily_analyzer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

